--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: metafx unique
       run: |
+            export PATH=bin:$PATH
             chmod +x bin/metafx
-            bin/metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt
+            metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt
