--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: metafx unique
+    - name: Setup
       run: |
-            export PATH=bin:$PATH
-            chmod +x bin/metafx
-            chmod +x bin/metafx-modules/*
-            chmod +x bin/metafx-scripts/*
-            metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+    - name: metafx unique
+      run: metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_unique
+    - name: metafx metafast
+      run: metafx metafast -t 2 -m 6G -k 31 -i test_data/test/* test_data/3* test_data/4* -b1 200 -b2 5000 -l 50 -w wd_metafast
