--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,10 @@ jobs:
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx colored -t 2 -m 6G -k 31 -i test_data/sample_list_3.txt --n-comps 100 --perc 0.7 -w wd_colored
+    - name: metafx stats
+      run: |
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+        metafx stats -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_stats
