--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,3 +47,14 @@ jobs:
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx stats -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_stats
+    - name: metafx metaspades
+      run: |
+        $CONDA/bin/conda create -n spades -c bioconda spades python=3.8
+        $CONDA/bin/conda activate spades
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+        metafx metaspades -t 2 -m 6G -k 31 -i test_data/33* -b1 100 -b2 1000 -l 50 -w wd_metaspades
