--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,13 +26,15 @@ jobs:
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_unique
-    - name: metafx metafast
+    - name: metafx metafast & metafx pca
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx metafast -t 2 -m 6G -k 31 -i test_data/test/* test_data/3* test_data/4* -b1 200 -b2 5000 -l 50 -w wd_metafast
+        metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list_train.txt -w wd_unique --kmers-dir wd_metafast/kmer-counter-many/kmers
+        metafx pca -f wd_unique/feature_table.tsv -i wd_unique/categories_samples.tsv --show -w wd_pca
     - name: metafx colored
       run: |
         export PATH=bin:$PATH
