--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,28 +25,28 @@ jobs:
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_unique
+        metafx unique -t 6 -m 6G -k 31 -i test_data/sample_list.txt -w wd_unique
     - name: metafx metafast
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx metafast -t 2 -m 6G -k 31 -i test_data/test/* test_data/3* test_data/4* -b1 200 -b2 5000 -l 50 -w wd_metafast
+        metafx metafast -t 6 -m 6G -k 31 -i test_data/test/* test_data/3* test_data/4* -b1 200 -b2 5000 -l 50 -w wd_metafast
     - name: metafx colored
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx colored -t 2 -m 6G -k 31 -i test_data/sample_list_3.txt --n-comps 100 --perc 0.7 -w wd_colored
+        metafx colored -t 6 -m 6G -k 31 -i test_data/sample_list_3.txt --n-comps 100 --perc 0.7 -w wd_colored
     - name: metafx stats
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx stats -t 2 -m 6G -k 31 -i test_data/sample_list.txt -w wd_stats
+        metafx stats -t 6 -m 6G -k 31 -i test_data/sample_list.txt -w wd_stats
     - name: metafx metaspades
       run: |
         wget http://cab.spbu.ru/files/release3.15.5/SPAdes-3.15.5-Linux.tar.gz
@@ -56,21 +56,21 @@ jobs:
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx metaspades -t 2 -m 6G -k 31 -i test_data/33* -b1 100 -b2 1000 -l 50 -w wd_metaspades
+        metafx metaspades -t 6 -m 6G -k 31 -i test_data/33* -b1 100 -b2 1000 -l 50 -w wd_metaspades
     - name: metafx calc_features
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx calc_features -t 2 -m 6G -k 31 -i test_data/test_* -d wd_unique -w wd_calc_unique
+        metafx calc_features -t 6 -m 6G -k 31 -i test_data/test_* -d wd_unique -w wd_calc_unique
     - name: metafx pca
       run: |
         export PATH=bin:$PATH
         chmod +x bin/metafx
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
-        metafx unique -t 2 -m 6G -k 31 -i test_data/sample_list_train.txt -w wd_unique_pca --kmers-dir wd_metafast/kmer-counter-many/kmers
+        metafx unique -t 6 -m 6G -k 31 -i test_data/sample_list_train.txt -w wd_unique_pca --kmers-dir wd_metafast/kmer-counter-many/kmers
         metafx pca -f wd_unique_pca/feature_table.tsv -i wd_unique_pca/samples_categories.tsv --show -w wd_pca
     - name: metafx fit
       run: |
@@ -79,3 +79,10 @@ jobs:
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx fit -f wd_unique_pca/feature_table.tsv -i wd_unique_pca/samples_categories.tsv -w wd_fit
+    - name: metafx cv
+      run: |
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+        metafx cv -f wd_unique_pca/feature_table.tsv -i wd_unique_pca/samples_categories.tsv -w wd_cv -n 3 --grid -t 6
