Add module to predict labels based on pre-trained model

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,3 +86,11 @@ jobs:
         chmod +x bin/metafx-modules/*
         chmod +x bin/metafx-scripts/*
         metafx cv -f wd_unique_pca/feature_table.tsv -i wd_unique_pca/samples_categories.tsv -w wd_cv -n 2 --grid -t 6
+    - name: metafx predict
+      run: |
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+        echo -e "test_A\tA\ntest_B\tB\ntest_C\tC\ntest_D\tD\n" > test_labels.tsv
+        metafx predict -f wd_calc_unique/feature_table.tsv --model wd_cv/rf_model_cv.joblib -w wd_predict -i test_labels.tsv
