Add fit_predict module

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,3 +94,10 @@ jobs:
         chmod +x bin/metafx-scripts/*
         echo -e "test_A\tA\ntest_B\tB\ntest_C\tC\ntest_D\tD\n" > test_labels.tsv
         metafx predict -f wd_calc_features/feature_table.tsv --model wd_cv/rf_model_cv.joblib -w wd_predict -i test_labels.tsv
+    - name: metafx fit_predict
+      run: |
+        export PATH=bin:$PATH
+        chmod +x bin/metafx
+        chmod +x bin/metafx-modules/*
+        chmod +x bin/metafx-scripts/*
+        metafx fit_predict -f wd_unique_pca/feature_table.tsv -i wd_unique_pca/samples_categories.tsv -w wd_fit_predict
