--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
     - name: metafx metaspades (macOS)
       if : ${{ matrix.os == 'macos-12' || matrix.os == 'macos-11' }}
       run: |
-        curl http://cab.spbu.ru/files/release3.15.5/SPAdes-3.15.5-Darwin.tar.gz -o SPAdes-3.15.5-Darwin.tar.gz
+        curl -L https://github.com/ablab/spades/releases/download/v3.15.5/SPAdes-3.15.5-Darwin.tar.gz -o SPAdes-3.15.5-Darwin.tar.gz
         tar -zxf SPAdes-3.15.5-Darwin.tar.gz
         export PATH=bin:$PATH
         export PATH=SPAdes-3.15.5-Darwin/bin/:$PATH
