--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,13 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install coreutils (macOS)
-      if : ${{ matrix.os == 'macos-12' || matrix.os == 'macos-11' }}
-      run: |
-        brew update
-        brew install coreutils
+      uses: ConorMacBride/install-package@v1
+      with:
+        brew: coreutils
+      #if : ${{ matrix.os == 'macos-12' || matrix.os == 'macos-11' }}
+      #run: |
+      #  brew update
+      #  brew install coreutils
     - name: metafx unique
       run: |
         export PATH=bin:$PATH
