--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-scikit-learn
-matplotlib
-joblib
-ete3
+numpy==1.21.4
+pandas==1.3.4
+scikit-learn==1.3.0
+matplotlib==3.8.2
+joblib==1.2.0
+ete3==3.1.3
